src/main/java/com/example/WeatherSensor/util/validation/groups/SensorExistenceValidationGroup.java
package com.example.WeatherSensor.util.validation.groups;

public interface SensorExistenceValidationGroup {
}
